<?xml version="1.0"?>
<package>
  <name>templates</name>
  <version>1.0.0</version>
  <description>The templates package, which contains templates for action servers and clients, service servers and clients and others</description>

  <maintainer email="job.1994@gmail.com">Job van Dieten</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>action_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>


</package>